<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="35dp"
        android:background="@color/verde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/voltar"
        android:layout_width="84dp"
        android:layout_height="25dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="284dp"
        android:text="@string/voltar"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/view" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/seta"

        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <TextView
        android:id="@+id/Cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cadastre_se"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="30sp"
        android:textStyle="bold"


        app:layout_constraintStart_toStartOf="@id/preencha"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/preencha"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/preencha_todos_os_campos"
        android:textStyle="bold"
        android:textColor="@color/texto"

        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/Cadastrar"
        app:layout_constraintStart_toStartOf="@id/email"
         />

    <EditText
        android:id="@+id/email"
        style="@style/Edit_Text"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"

        app:layout_constraintStart_toStartOf="@id/preencha"
        app:layout_constraintTop_toBottomOf="@id/preencha"
        android:layout_marginTop="18dp"
         />

    <EditText
        android:id="@+id/tell"
        style="@style/Edit_Text"
        android:hint="@string/telefone"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/preencha"
        app:layout_constraintTop_toBottomOf="@id/preencha"
        android:layout_marginTop="85dp"
         />

    <EditText
        android:id="@+id/DataNasc"
        style="@style/Edit_Text"
        android:hint="@string/data_de_nascimento"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/preencha"
        app:layout_constraintTop_toBottomOf="@id/preencha"
        android:layout_marginTop="155dp"
         />

    <EditText
        android:id="@+id/senha"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/olho"
        android:hint="@string/Senha"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/preencha"
        app:layout_constraintTop_toBottomOf="@id/preencha"
        android:layout_marginTop="226dp"
        />


    <EditText
        android:id="@+id/confsenha"
        style="@style/Edit_Text"
        android:drawableRight="@drawable/olho"
        android:hint="@string/confirme_a_senha"
        android:inputType="number"

        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toBottomOf="@id/view4"
        android:layout_marginTop="20dp"
         />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="18dp"
        android:background="@color/cinza"

        app:layout_constraintEnd_toEndOf="@id/senha"
        app:layout_constraintStart_toStartOf="@id/senha"
        app:layout_constraintTop_toBottomOf="@id/senha"
        />

    <Button
        android:id="@+id/cadastrar"
        style="@style/Button"
        android:backgroundTint="@color/verde"
        android:text="@string/cadastrar"
        android:textSize="25sp"

        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toBottomOf="@id/view4"
        android:layout_marginTop="150dp"
         />

</androidx.constraintlayout.widget.ConstraintLayout>

